--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,7 +1,7 @@
 /* Tailwind CSS imports */
-@import 'tailwindcss/base';
-@import 'tailwindcss/components'; 
-@import 'tailwindcss/utilities';
+@use 'tailwindcss/base';
+@use 'tailwindcss/components'; 
+@use 'tailwindcss/utilities';
 
 /* Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700&family=Open+Sans:wght@300;400;500;600;700&display=swap');
